Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link href="/theme/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>PyConAmazonia[2017]</title>
-    <meta name="description" content="PyCon Amazônia 2017">
+    <title>PyConAmazonia[2019]</title>
+    <meta name="description" content="PyCon Amazônia 2019">
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,500' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="/theme/css/main.css">
@@ -47,11 +47,11 @@
     <div class="jumbotron text-center">
       <div style="width: 100; height: 100%; background: rgba(14,21,85, 0.75);"></div>
       <div class="content">
-        <div class="event-date">AGOSTO 18-19, MANAUS/AM</div>
-        <h1>PYCON AMAZÔNIA 2018</h1>
-        <p class="lead">2ª Conferência da Comunidade Python no Norte do Brasil</p>
-        <a href="https://www.sympla.com.br/pycon-amazonia-2018__287688">
-          <button type="button" class="btn btn-default btn-lg">Inscreva-se!</button>
+        <div class="event-date">AGOSTO 3-4, Porto Velho/RO</div>
+        <h1>PYCON AMAZÔNIA 2019</h1>
+        <p class="lead">3ª Conferência da Comunidade Python no Norte do Brasil</p>
+        <a href="#">
+          <button type="button" class="btn btn-default btn-lg">Inscrições em breve!</button>
         </a>
       </div>
     </div>
@@ -63,51 +63,75 @@
               A PyCon Amazônia reunirá centenas de pessoas durante dois dias para discutir sobre software livre, práticas de desenvolvimento e Python.
             </p>
             <p class="lead">
-              Este evento é organizado pela comunidade e para a comunidade. Conheça mais sobre o PyNorte e PyLadies Amazonas. Participe, compartilhe conhecimento e ajude a comunidade a crescer.
+              Este evento é organizado pela comunidade e para a comunidade. Conheça mais sobre o PyNorte e PyLadies. Participe, compartilhe conhecimento e ajude a comunidade a crescer.
             </p>
           </div>
           <div class="col-md-4">
             <address>
-              <strong>Instituto Federal do Amazonas - IFAM</strong><br>
-              Avenida Sete de Setembro, 1975<br>
-              Centro<br>
-              Manaus/AM, 69020-120<br>
-              (92) 3621-6700
+              <strong>Instituto Federal de Rondônia - IFRO</strong><br>
+              Av. Gov. Jorge Teixeira, 3.146<br>
+              Industrial<br>
+              Porto Velho/RO, 76821-002<br>
+              (69) 2182-3815
             </address>
           </div>
         </div>
       </div>
     </section>
-    <section id="section-speaker" class="section-wrapper team gray-bg">
-      <div class="container">
+<section id="section-speaker" class="section-wrapper team gray-bg">
+    <div class="container">
         <div class="row">
-          <div class="col-md-12">
-            <div class="section-title">
-              <h1>KEYNOTES</h1>
+            <div class="col-md-12">
+                <div class="section-title">
+                    <h1>KEYNOTES</h1>
+                </div>
             </div>
-          </div>
         </div>
-          <div class="row">
-            <div class="col-sm-6 col-md-3">
-              <figure class="thumbnail">
-                <a href="#"><img src="images/gileno.jpeg" class="img-responsive" alt="Image"></a>
-                <figcaption class="caption text-center">
-                  <h3>Gileno Filho</h3>
-                  <p>Fundador da empresa PyCursos em 2012, trabalha com Python desde 2008, participando ativamente das comunidades de software livre, palestrando em eventos como Python Brasil, Python Nordeste, Campus Party entre outros eventos.
-                      Pelo PyCursos, já ministrou treinamentos em empresas e instituições como: Mercado Livre, Câmara dos Deputados, Grupo Zenir, UFPE, IFMA, FPF Tech entre outros
-                    </p>
-                  <ul class="social-links">
-                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="#"><i class="fa fa-envelope"></i></a></li>
-                  </ul>
-                </figcaption>
-              </figure>
+        <div class="row">
+            <div class="col-sm-6 col-md-6">
+                <figure class="thumbnail">
+                    <a href="#"><img src="images/keynote_eduardo.jpg" class="img-responsive" alt="Image"></a>
+                    <figcaption class="caption text-center">
+                        <h3>Eduardo Mendes</h3>
+
+                        <ul class="social-links">
+                            <li><a href="#"><i class="fa fa-twitter"></i>@dunossauro</a></li>
+                            <li><a href="https://www.youtube.com/user/eduardomendes"><i class="fa fa-youtube"></i>eduardomendes</a></li>
+                            <li><a href="#"><i class="fa fa-github"></i>@dunossauro</a></li>
+                            <li><a href="#"><i class="fa fa-gitlab"></i>@dunossauro</a></li>
+                        </ul>
+
+                        <p>
+                            Apto fazedor de lambdas, apaixonado por software livre e ciência.
+                        </p>
+
+
+                    </figcaption>
+                </figure>
             </div>
-          </div>
-      </div>
-    </section>
+
+            <div class="col-sm-6 col-md-6">
+                <figure class="thumbnail">
+                    <a href="#"><img src="images/keynote_renzo.jpg" class="img-responsive" alt="Image"></a>
+                    <figcaption class="caption text-center">
+                        <h3>Renzo Nuccitelli</h3>
+
+                        <ul class="social-links">
+                            <li><a href="#"><i class="fa fa-linkedin"></i>renzonuccitelli</a></li>
+                            <li><a href="https://www.youtube.com/user/renzonuccitelli"><i class="fa fa-youtube"></i>renzonuccitelli</a></li>
+                            <li><a href="#"><i class="fa fa-github"></i>@renzon</a></li>
+                        </ul>
+
+                        <p>
+                            Engenheiro de Computação formado pelo ITA. Especialista em programação web no Google App Engine, usa Python desde 2009. Foi Diretor de Tecnologia na startup de educação QMagico, Apaixonado por dar aulas, é professor da Fatec onde ministra as matérias de "Orientação a Objetos" e "Aplicações para Internet Utilizando Banco de Dados". Já palestrou em eventos como Pycon US, Google Developer Bus, DevFest, Rupy e Python Brasil. Escreve sobre tecnologia em seu blog.renzo.pro.br. Atualmente é Engenheiro de Qualidade na Red Hat.
+                        </p>
+
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
+</section>
     <section id="section-papers" class="section-wrapper pricing-section">
       <div class="container">
         <div class="row">
@@ -121,7 +145,7 @@
         <div class="row">
           <div class="col-sm-12">
             <h2 class="text-center">
-              <a href="https://speakerfight.com/events/pycon-amazonia-2018/">
+              <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
                 Envie sua proposta!
               </a>
             </h2>  
@@ -238,16 +262,16 @@
           <div class="col-md-12">
             <div class="section-title">
               <h1>LOCAL</h1>
-              <p>IFAM - Instituto Federal de Educação, Ciência e Tecnologia do Amazonas</p>
-              <p>Avenida Sete de Setembro, 1975, Centro, Manaus/AM</p>
+              <p>IFRO - Instituto Federal de Educação, Ciência e Tecnologia de Rondônia</p>
+              <p>Av. Gov. Jorge Teixeira, 3.146, Industrial - Porto Velho/RO</p>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-12">
             <div id="googleMap">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.85018571195!2d-60.01499228465953!3d-3.134256441318914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x926c057715e51dc1%3A0x131a0659382fadd9!2sInstituto+Federal+de+Educa%C3%A7%C3%A3o%2C+Ci%C3%AAncia+e+Tecnologia+do+Amazonas+-+IFAM+-+Unidade+Centro!5e0!3m2!1spt-BR!2sbr!4v1525457587301"
-                frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15774.013427903743!2d-63.882409414898454!3d-8.738617849561427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x15151a7b52d18c02!2sIFRO+-+Instituto+Federal+de+Educa%C3%A7%C3%A3o%2C+Ci%C3%AAncia+e+Tecnologia+de+Rond%C3%B4nia+-+Campus+Zona+Norte!5e0!3m2!1spt-BR!2sbr!4v1555859244586!5m2!1spt-BR!2sbr"
+                      frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
