Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top"><img src="/images/pycon-amazonia.jpg" alt=""></a>
+            <a class="navbar-brand page-scroll" href="#page-top"><img src="/images/logo-gray.svg" alt="" width="30%"></a>
           </div>
           <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
             <ul class="nav navbar-nav">
@@ -45,11 +45,11 @@
       </nav>
     </header>
     <div class="jumbotron text-center">
-      <div style="width: 100; height: 100%; background: rgba(14,21,85, 0.75);"></div>
+      <div style="width: 100%; height: 100%; background: rgba(14,80,85, 0.75);"></div>
       <div class="content">
-        <div class="event-date">AGOSTO 3-4, Porto Velho/RO</div>
+        <div class="event-date"><b>3 e 4 de AGOSTO, Porto Velho/RO</b></div>
         <h1>PYCON AMAZÔNIA 2019</h1>
-        <p class="lead">3ª Conferência da Comunidade Python no Norte do Brasil</p>
+        <p class="lead"><b>3ª Conferência da Comunidade Python no Norte do Brasil</b></p>
         <a href="#">
           <button type="button" class="btn btn-default btn-lg">Inscrições em breve!</button>
         </a>
@@ -78,6 +78,7 @@
         </div>
       </div>
     </section>
+
 <section id="section-speaker" class="section-wrapper team gray-bg">
     <div class="container">
         <div class="row">
@@ -145,7 +146,7 @@
         <div class="row">
           <div class="col-sm-12">
             <h2 class="text-center">
-              <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
+              <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
                 Envie sua proposta!
               </a>
             </h2>  
@@ -312,8 +313,8 @@
         <div class="copyright-section">
           <div class="container">
             <div class="col-md-12">
-              <div class="copytext text-center">Foto de Manaus a noite de <a href="https://www.flickr.com/photos/13786369@N04/5304603727/in/photolist-95KtSX-jqeHbN-c5Hdwu-nPDiLh-9c2X8q-6qxYjW-hkeUVW-iL7L4V-eV1eRj-iXqSkE-jfCz4G-qayLJR-bALCP6-2fELm4-aC7stj-4Wab3T-aC7snd-cwrRUb-bzVEhm-nvTSxz-a7RqZU-aC4Pd6-9jyDV2-AiyWxG-ojdfqk-ofaMJU-bLrk52-c5HdhE-6j8vs9-3bBqfs-bNQkE2-4WaqBT-2fELvD-cmniKQ-oiZkwN-9vwiEz-ohbkd3-aC4NwP-a7RqVw-a7NxXx-aC7rzL-cBvZWN-9ddamL-a7RrCw-a7Nxyv-c5HeJC-f9KDvq-aC7t43-xrFJ75-bi2Ta4/">
-  Renato Ribeiro</a>, utilizada nos termos da licença Creative Commons.</div>
+              <div class="copytext text-center">Foto panorâmica de Porto Velho obtida no <a href="https://www.portovelho.ro.gov.br/artigo/17800/a-cidade">
+  site da Prefeitura</a>, utilizada nos termos da licença Creative Commons.</div>
               <div class="copytext text-center">O logotipo da conferência foi criado por Marcos Thomaz (@marcosthomazs)</div>
               <div class="copytext text-center">PyCon Amazônia is a non-proﬁt volunteer-driven conference for promoting the open-source Python programming language. It is supported by the Brazilian Python Association (APyB) and by the Python Software Foundation (PSF).</div>
             </div>
